--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 auth.json 
 mturk-and-gmail.txt 
-EY_auth.json 
+EY_auth.json
+first_batch_254Acc_RAW.csv
+second_batch_langcogAcc.csv
+second_batch_langcogAcc_RAW.csv
